Migrate trigger orders to Aeron core